Adding macos native view implementation

--- a/assets/lib/CMakeLists.txt
+++ b/assets/lib/CMakeLists.txt
@@ -70,6 +70,8 @@ SET(FETCHCONTENT_QUIET FALSE)
     add_subdirectory(${PROJECT_SOURCE_DIR}/src/vendor/crunch)
         
     if(APPLE)
+      add_compile_definitions(OBJC_DEBUG_MISSING_POOLS=1)
+
       add_subdirectory(${PROJECT_SOURCE_DIR}/src/vendor/metal-cpp)
     
       list(APPEND typhon_LIBRARIES METAL_CPP)
@@ -170,7 +172,42 @@ SET(FETCHCONTENT_QUIET FALSE)
 #tests
 
 if(TYPHON_RUN_TESTS)
+  add_subdirectory(${PROJECT_SOURCE_DIR}/src/vendor/catch2)
+
+  list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/src/vendor/catch2/extras)
+
+  include(CTest)
+  include(Catch)
+
+  # Creating shared test library to be loaded as dll/dylib
+  add_library(typhon_shared_tests_lib SHARED tests/shared_library_code.cpp)
+
+  set_target_properties(typhon_shared_tests_lib PROPERTIES
+      CXX_STANDARD 20
+  )
+
+  set_target_properties(typhon_shared_tests_lib PROPERTIES
+  C_STANDARD 20
+  )
   
+  target_link_libraries(typhon_shared_tests_lib PRIVATE typhon)
+
+  # Creating test to load dll/dylib created above
+  add_executable(typhon_shared_tests 
+    tests/shared_library_test.cpp  
+  )
+
+  set_target_properties(typhon_shared_tests PROPERTIES
+      CXX_STANDARD 20
+  )
+
+  set_target_properties(typhon_shared_tests PROPERTIES
+      C_STANDARD 20
+  )
+
+  add_dependencies(typhon_shared_tests typhon_shared_tests_lib)
+
+  # Adding main engine tests
   add_executable(typhon_tests 
     tests/main_test.cpp
   )
@@ -185,16 +222,10 @@ if(TYPHON_RUN_TESTS)
       C_STANDARD 20
   )
 
-  add_subdirectory(${PROJECT_SOURCE_DIR}/src/vendor/catch2)
-  
   target_link_libraries(typhon_tests PRIVATE Catch2::Catch2WithMain)
   target_link_libraries(typhon_tests PRIVATE typhon)
-
-  list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/src/vendor/catch2/extras)
-
-  include(CTest)
-  include(Catch)
-    
+  
+  catch_discover_tests(typhon_shared_tests)
   catch_discover_tests(typhon_tests)
 
 endif()
