[feat] MacOS code and README changes
# Description

* Updated the MacOS rendering code to support shaders
* Created the outline of the rendering engine in rendering_engine.h and integrated with the MacOS renderer
* Fixed README

--- a/assets/lib/CMakeLists.txt
+++ b/assets/lib/CMakeLists.txt
@@ -131,6 +131,7 @@ SET(FETCHCONTENT_QUIET FALSE)
     target_link_libraries(typhon PUBLIC spirv-cross-cpp)
     target_link_libraries(typhon PUBLIC spirv-cross-msl)
     target_link_libraries(typhon PUBLIC spirv-cross-hlsl)
+    target_link_libraries(typhon PUBLIC spirv-cross-reflect)
     target_include_directories(typhon PUBLIC ${PROJECT_SOURCE_DIR}/src/vendor/spirv_cross/)
 
 
