--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,7 +117,8 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "parentbad": "cpp"
+        "parentbad": "cpp",
+        "*.hpp11": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
