adding cmake download if no cmake is present

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -384,6 +384,142 @@ flutter:
     - assets/lib/src/vendor/dylib/.git/hooks/
     - assets/lib/src/vendor/dylib/.git/refs/heads/
     - assets/lib/src/vendor/dylib/.git/refs/remotes/origin/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/_CodeSignature/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/man/man1/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/man/man7/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/MacOS/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/bin/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/PlugIns/platforms/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/PlugIns/styles/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Resources/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/cmzlib/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/cmliblzma/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/cmnghttp2/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/guide/tutorial/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/guide/using-dependencies/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/guide/ide-integration/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/guide/user-interaction/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/guide/importing-exporting/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_downloads/3e2d73bff478d88a7de0de736ba5e361/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/envvar/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/prop_test/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/variable/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/module/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/guide/tutorial/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/guide/using-dependencies/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/guide/ide-integration/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/guide/user-interaction/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/guide/importing-exporting/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/envvar/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/prop_test/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/variable/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/module/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/prop_sf/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/release/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/prop_tgt/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/generator/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/prop_gbl/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/manual/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/prop_dir/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/command/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/cpack_gen/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/prop_inst/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/prop_cache/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_sources/policy/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/prop_sf/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_static/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/release/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/prop_tgt/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/generator/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/_images/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/prop_gbl/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/manual/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/prop_dir/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/command/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/cpack_gen/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/prop_inst/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/prop_cache/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/html/policy/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/cmlibuv/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/cmlibrhash/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/cmsys/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/cmcurl/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/cmlibarchive/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/doc/cmake/cmzstd/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtPrintSupport.framework/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtPrintSupport.framework/Versions/5/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtPrintSupport.framework/Versions/5/_CodeSignature/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtPrintSupport.framework/Versions/5/Resources/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtGui.framework/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtGui.framework/Versions/5/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtGui.framework/Versions/5/_CodeSignature/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtGui.framework/Versions/5/Resources/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtCore.framework/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtCore.framework/Versions/5/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtCore.framework/Versions/5/_CodeSignature/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtCore.framework/Versions/5/Resources/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtWidgets.framework/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtWidgets.framework/Versions/5/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtWidgets.framework/Versions/5/_CodeSignature/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/Frameworks/QtWidgets.framework/Versions/5/Resources/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/vim/vimfiles/indent/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/vim/vimfiles/syntax/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/aclocal/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/emacs/site-lisp/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Licenses/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/include/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Templates/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Templates/MSBuild/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Templates/MSBuild/FlagTables/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Templates/Windows/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/UseSWIG/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/FortranCInterface/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/FortranCInterface/Verify/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/CheckIPOSupported/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/IntelVSImplicitPath/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/FetchContent/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/UseJava/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/CUDA/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/Platform/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/Platform/Android/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/Platform/AIX/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/Internal/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/Internal/OSRelease/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/Internal/CPack/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/AndroidTestUtilities/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/FindCUDA/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/FindPython/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/CMakeAddFortranSubdirectory/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/ExternalProject/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/CompilerId/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/Compiler/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/Compiler/XL-Fortran/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Modules/FindMPI/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/envvar/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/prop_test/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/variable/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/module/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/include/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/prop_sf/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/release/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/prop_tgt/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/generator/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/prop_gbl/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/manual/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/manual/presets/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/prop_dir/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/command/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/cpack_gen/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/prop_inst/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/prop_cache/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/cmake-3.26/Help/policy/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/share/bash-completion/completions/
     - assets/lib/src/vendor/entt/
     - assets/lib/src/vendor/entt/test/
     - assets/lib/src/vendor/entt/test/benchmark/
