--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     # __BEGIN__ASSETS__INCLUSION__
     - assets/lib/src/./
     - assets/lib/src/macos/
+    - assets/lib/src/vendor/
     - assets/lib/src/vendor/metal-cpp/
     - assets/lib/src/vendor/metal-cpp/metal-cpp/
     - assets/lib/src/vendor/metal-cpp/metal-cpp/Metal/
@@ -384,6 +385,8 @@ flutter:
     - assets/lib/src/vendor/dylib/.git/hooks/
     - assets/lib/src/vendor/dylib/.git/refs/heads/
     - assets/lib/src/vendor/dylib/.git/refs/remotes/origin/
+    - assets/lib/src/vendor/cmake/
+    - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/
     - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/
     - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/_CodeSignature/
     - assets/lib/src/vendor/cmake/cmake-3.26.3-macos-universal/CMake.app/Contents/man/man1/
