updating to better separate files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,11 @@ flutter:
     - assets/images/sprites/
     # __BEGIN__ASSETS__INCLUSION__
     - assets/lib/src/./
+    - assets/lib/src/ui/
     - assets/lib/src/macos/
+    - assets/lib/src/component/
+    - assets/lib/src/component/default_components/
+    - assets/lib/src/object/
     - assets/lib/src/prefab/
     - assets/lib/src/prefab/defaults/
     - assets/lib/src/vendor/metal-cpp/
